--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,15 +9,18 @@
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="de.gianasista.tldr_viewer.TldrApplication" >
         <activity
             android:name="de.gianasista.tldr_viewer.CommandListActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,6 +30,7 @@
         <activity
             android:name="de.gianasista.tldr_viewer.CommandContentActivity"
             android:label="@string/command_content_label"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             android:parentActivityName="de.gianasista.tldr_viewer.CommandListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
